# couchdb

./: .gitignore  DEVELOPERS  LICENSE  Makefile  Makefile.am  configure.ac  license.skip  rebar.config
build-aux/: dist-error  sphinx-build
extra/: Makefile.am
extra/couchjs-node/: Makefile.am
rel/: reltool.config
rel/overlay/etc/: default.ini
share/: Makefile.am
share/doc/ext/: dashdocset.py
share/doc/src/: conf.py  configuring.rst  contents.rst  experimental.rst  troubleshooting.rst
share/doc/src/api/document/: common.rst
share/doc/src/install/: unix.rst
share/doc/src/whatsnew/: 1.6.rst
share/doc/static/: ga-couchdbdocs.js
share/doc/templates/: searchbox.html
share/doc/templates/pages/: index.html
share/examples/: Makefile.am
share/www/: Makefile.am
share/www/fauxton/: Makefile.am
share/www/fauxton/src/: Gruntfile.js
src/: Makefile.am
src/couch/src/: couch.app.src
src/couchdb/: couch_httpd.erl  couch_httpd_misc_handlers.erl
src/fauxton/: Gruntfile.js  settings.json.default
src/fauxton/app/: api.js  app.js  config.js  helpers.js  router.js  utils.js
src/fauxton/app/addons/activetasks/: routes.js
src/fauxton/app/addons/config/: resources.js
src/fauxton/app/addons/config/assets/less/: config.less
src/fauxton/app/addons/databases/assets/less/: databases.less
src/fauxton/app/addons/documents/: resources.js  routes.js  views.js
src/fauxton/app/addons/documents/assets/less/: documents.less
src/fauxton/app/addons/documents/templates/: all_docs_list.html  view_editor.html
src/fauxton/app/addons/documents/tests/: resourcesSpec.js
src/fauxton/app/addons/fauxton/: base.js  components.js
src/fauxton/app/addons/logs/: routes.js
src/fauxton/app/addons/permissions/: resources.js  views.js
src/fauxton/app/addons/permissions/tests/: viewsSpec.js
src/fauxton/app/addons/replication/: resources.js  route.js  views.js
src/fauxton/app/addons/replication/assets/less/: replication.less
src/fauxton/app/addons/replication/templates/: authfields.html  form.html  localremotetabs.html  newdatabase.html  options.html
src/fauxton/app/addons/stats/: resources.js
src/fauxton/app/addons/verifyinstall/: resources.js  routes.js  views.js
src/fauxton/app/addons/verifyinstall/templates/: main.html
src/fauxton/app/modules/databases/: resources.js  routes.js
src/fauxton/app/modules/documents/: resources.js  routes.js  views.js
src/fauxton/app/modules/fauxton/: base.js  components.js  paginate.js
src/fauxton/app/templates/documents/: advanced_options_menu.html  all_docs_number.html  sidebar.html  view_editor.html
src/fauxton/app/templates/fauxton/: api_bar.html
src/fauxton/assets/js/plugins/: happy.js
src/fauxton/assets/less/: database.less  fauxton.less
src/fauxton/test/core/: paginateSpec.js
src/snappy/: Makefile.am  snappy.app.in  snappy_nif.cc
test/etap/: 071-all_dbs.t
