## Licensed under the Apache License, Version 2.0 (the "License"); you may not
## use this file except in compliance with the License. You may obtain a copy of
## the License at
##
##   http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
## WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
## License for the specific language governing permissions and limitations under
## the License.

nobase_dist_localdata_DATA = \
    www/fauxton/css/index.css \
    www/fauxton/img/couchdb-site.png \
    www/fauxton/img/couchdblogo.png \
    www/fauxton/img/fontawesome-webfont.eot \
    www/fauxton/img/fontawesome-webfont.svg \
    www/fauxton/img/fontawesome-webfont.ttf \
    www/fauxton/img/fontawesome-webfont.woff \
    www/fauxton/img/FontAwesome.otf \
    www/fauxton/img/fontcustom_fauxton.eot \
    www/fauxton/img/fontcustom_fauxton.svg \
    www/fauxton/img/fontcustom_fauxton.ttf \
    www/fauxton/img/fontcustom_fauxton.woff \
    www/fauxton/img/glyphicons-halflings-white.png \
    www/fauxton/img/glyphicons-halflings.png \
    www/fauxton/img/linen.png \
    www/fauxton/img/loader.gif \
    www/fauxton/img/minilogo.png \
    www/fauxton/index.html \
    www/fauxton/js/require.js \
