## Licensed under the Apache License, Version 2.0 (the "License"); you may not
## use this file except in compliance with the License. You may obtain a copy of
## the License at
##
##   http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
## WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
## License for the specific language governing permissions and limitations under
## the License.

EXTRA_DIST = $(FAUXTON_FILES)

FAUXTON_FILES = \
    src/app/addons/activetasks/assets/less/activetasks.less \
    src/app/addons/activetasks/base.js \
    src/app/addons/activetasks/resources.js \
    src/app/addons/activetasks/routes.js \
    src/app/addons/activetasks/templates/detail.html \
    src/app/addons/activetasks/templates/table.html \
    src/app/addons/activetasks/templates/tabledetail.html \
    src/app/addons/activetasks/templates/tabs.html \
    src/app/addons/activetasks/tests/viewsSpec.js \
    src/app/addons/activetasks/views.js \
    src/app/addons/auth/assets/less/auth.less \
    src/app/addons/auth/base.js \
    src/app/addons/auth/resources.js \
    src/app/addons/auth/routes.js \
    src/app/addons/auth/templates/change_password.html \
    src/app/addons/auth/templates/create_admin.html \
    src/app/addons/auth/templates/login.html \
    src/app/addons/auth/templates/nav_dropdown.html \
    src/app/addons/auth/templates/nav_link_title.html \
    src/app/addons/auth/templates/noAccess.html \
    src/app/addons/config/base.js \
    src/app/addons/config/resources.js \
    src/app/addons/config/routes.js \
    src/app/addons/config/templates/dashboard.html \
    src/app/addons/config/templates/item.html \
    src/app/addons/contribute/base.js \
    src/app/addons/exampleAuth/base.js \
    src/app/addons/exampleAuth/templates/noAccess.html \
    src/app/addons/logs/base.js \
    src/app/addons/logs/resources.js \
    src/app/addons/logs/routes.js \
    src/app/addons/logs/templates/dashboard.html \
    src/app/addons/logs/templates/filterItem.html \
    src/app/addons/logs/templates/sidebar.html \
    src/app/addons/logs/tests/logSpec.js \
    src/app/addons/permissions/assets/less/permissions.less \
    src/app/addons/permissions/base.js \
    src/app/addons/permissions/resources.js \
    src/app/addons/permissions/routes.js \
    src/app/addons/permissions/templates/item.html \
    src/app/addons/permissions/templates/permissions.html \
    src/app/addons/permissions/templates/section.html \
    src/app/addons/permissions/tests/resourceSpec.js \
    src/app/addons/permissions/tests/viewsSpec.js \
    src/app/addons/permissions/views.js \
    src/app/addons/plugins/base.js \
    src/app/addons/plugins/resources.js \
    src/app/addons/plugins/routes.js \
    src/app/addons/plugins/templates/plugins.html \
    src/app/addons/replication/assets/less/replication.less \
    src/app/addons/replication/base.js \
    src/app/addons/replication/resources.js \
    src/app/addons/replication/route.js \
    src/app/addons/replication/templates/form.html \
    src/app/addons/replication/templates/progress.html \
    src/app/addons/replication/tests/replicationSpec.js \
    src/app/addons/replication/views.js \
    src/app/addons/stats/assets/less/stats.less \
    src/app/addons/stats/base.js \
    src/app/addons/stats/resources.js \
    src/app/addons/stats/routes.js \
    src/app/addons/stats/templates/by_method.html \
    src/app/addons/stats/templates/pie_table.html \
    src/app/addons/stats/templates/stats.html \
    src/app/addons/stats/templates/statselect.html \
    src/app/addons/stats/views.js \
    src/app/api.js \
    src/app/app.js \
    src/app/config.js \
    src/app/helpers.js \
    src/app/initialize.js \
    src/app/load_addons.js.underscore \
    src/app/main.js \
    src/app/mixins.js \
    src/app/modules/databases/base.js \
    src/app/modules/databases/resources.js \
    src/app/modules/databases/routes.js \
    src/app/modules/databases/views.js \
    src/app/modules/documents/base.js \
    src/app/modules/documents/resources.js \
    src/app/modules/documents/routes.js \
    src/app/modules/documents/tests/resourcesSpec.js \
    src/app/modules/documents/views.js \
    src/app/modules/fauxton/base.js \
    src/app/modules/fauxton/components.js \
    src/app/modules/fauxton/layout.js \
    src/app/modules/pouchdb/base.js \
    src/app/modules/pouchdb/pouch.collate.js \
    src/app/modules/pouchdb/pouchdb.mapreduce.js \
    src/app/resizeColumns.js \
    src/app/router.js \
    src/app/templates/databases/item.html \
    src/app/templates/databases/list.html \
    src/app/templates/databases/newdatabase.html \
    src/app/templates/databases/sidebar.html \
    src/app/templates/documents/all_docs_item.html \
    src/app/templates/documents/all_docs_list.html \
    src/app/templates/documents/changes.html \
    src/app/templates/documents/ddoc_info.html \
    src/app/templates/documents/doc.html \
    src/app/templates/documents/doc_field_editor.html \
    src/app/templates/documents/doc_field_editor_tabs.html \
    src/app/templates/documents/duplicate_doc_modal.html \
    src/app/templates/documents/edit_tools.html \
    src/app/templates/documents/index_menu_item.html \
    src/app/templates/documents/index_row_docular.html \
    src/app/templates/documents/index_row_tabular.html \
    src/app/templates/documents/jumpdoc.html \
    src/app/templates/documents/search.html \
    src/app/templates/documents/sidebar.html \
    src/app/templates/documents/tabs.html \
    src/app/templates/documents/upload_modal.html \
    src/app/templates/documents/view_editor.html \
    src/app/templates/fauxton/api_bar.html \
    src/app/templates/fauxton/breadcrumbs.html \
    src/app/templates/fauxton/footer.html \
    src/app/templates/fauxton/index_pagination.html \
    src/app/templates/fauxton/nav_bar.html \
    src/app/templates/fauxton/notification.html \
    src/app/templates/fauxton/pagination.html \
    src/app/templates/layouts/one_pane.html \
    src/app/templates/layouts/two_pane.html \
    src/app/templates/layouts/with_right_sidebar.html \
    src/app/templates/layouts/with_sidebar.html \
    src/app/templates/layouts/with_tabs.html \
    src/app/templates/layouts/with_tabs_sidebar.html \
    fauxton/assets/css/nv.d3.css \
    fauxton/assets/img/couchdb-site.png \
    fauxton/assets/img/couchdblogo.png \
    fauxton/assets/img/fontawesome-webfont.eot \
    fauxton/assets/img/fontawesome-webfont.svg \
    fauxton/assets/img/fontawesome-webfont.ttf \
    fauxton/assets/img/fontawesome-webfont.woff \
    fauxton/assets/img/FontAwesome.otf \
    fauxton/assets/img/fontcustom_fauxton.eot \
    fauxton/assets/img/fontcustom_fauxton.svg \
    fauxton/assets/img/fontcustom_fauxton.ttf \
    fauxton/assets/img/fontcustom_fauxton.woff \
    fauxton/assets/img/glyphicons-halflings-white.png \
    fauxton/assets/img/glyphicons-halflings.png \
    fauxton/assets/img/linen.png \
    fauxton/assets/img/loader.gif \
    fauxton/assets/img/minilogo.png \
    fauxton/assets/index.underscore \
    fauxton/assets/js/libs/ace/ace.js \
    fauxton/assets/js/libs/ace/ext-static_highlight.js \
    fauxton/assets/js/libs/ace/ext-chromevox.js \
    fauxton/assets/js/libs/ace/ext-statusbar.js \
    fauxton/assets/js/libs/ace/ext-elastic_tabstops_lite.js \
    fauxton/assets/js/libs/ace/ext-textarea.js \
    fauxton/assets/js/libs/ace/ext-emmet.js \
    fauxton/assets/js/libs/ace/ext-themelist.js \
    fauxton/assets/js/libs/ace/ext-keybinding_menu.js \
    fauxton/assets/js/libs/ace/ext-whitespace.js \
    fauxton/assets/js/libs/ace/ext-language_tools.js \
    fauxton/assets/js/libs/ace/mode-javascript.js \
    fauxton/assets/js/libs/ace/ext-modelist.js \
    fauxton/assets/js/libs/ace/mode-json.js \
    fauxton/assets/js/libs/ace/ext-old_ie.js \
    fauxton/assets/js/libs/ace/mode-jsoniq.js \
    fauxton/assets/js/libs/ace/ext-options.js \
    fauxton/assets/js/libs/ace/ext-searchbox.js \
    fauxton/assets/js/libs/ace/theme-crimson_editor.js \
    fauxton/assets/js/libs/ace/ext-settings_menu.js \
    fauxton/assets/js/libs/ace/worker-javascript.js \
    fauxton/assets/js/libs/ace/ext-spellcheck.js \
    fauxton/assets/js/libs/ace/worker-json.js \
    fauxton/assets/js/libs/ace/ext-split.js \
    fauxton/assets/js/libs/ace/snippets/javascript.js \
    fauxton/assets/js/libs/ace/snippets/json.js \
    fauxton/assets/js/libs/ace/snippets/jsoniq.js \
    fauxton/assets/js/libs/almond.js \
    fauxton/assets/js/libs/backbone.js \
    fauxton/assets/js/libs/bootstrap.js \
    fauxton/assets/js/libs/d3.js \
    fauxton/assets/js/libs/jquery.js \
    fauxton/assets/js/libs/lodash.js \
    fauxton/assets/js/libs/nv.d3.js \
    fauxton/assets/js/libs/require.js \
    fauxton/assets/js/libs/spin.min.js \
    fauxton/assets/js/plugins/backbone.layoutmanager.js \
    fauxton/assets/js/plugins/jquery.form.js \
    fauxton/assets/js/plugins/prettify.js \
    fauxton/assets/less/bootstrap/accordion.less \
    fauxton/assets/less/bootstrap/alerts.less \
    fauxton/assets/less/bootstrap/bootstrap.less \
    fauxton/assets/less/bootstrap/breadcrumbs.less \
    fauxton/assets/less/bootstrap/button-groups.less \
    fauxton/assets/less/bootstrap/buttons.less \
    fauxton/assets/less/bootstrap/carousel.less \
    fauxton/assets/less/bootstrap/close.less \
    fauxton/assets/less/bootstrap/code.less \
    fauxton/assets/less/bootstrap/component-animations.less \
    fauxton/assets/less/bootstrap/dropdowns.less \
    fauxton/assets/less/bootstrap/font-awesome/bootstrap.less \
    fauxton/assets/less/bootstrap/font-awesome/core.less \
    fauxton/assets/less/bootstrap/font-awesome/extras.less \
    fauxton/assets/less/bootstrap/font-awesome/font-awesome-ie7.less \
    fauxton/assets/less/bootstrap/font-awesome/font-awesome.less \
    fauxton/assets/less/bootstrap/font-awesome/icons.less \
    fauxton/assets/less/bootstrap/font-awesome/mixins.less \
    fauxton/assets/less/bootstrap/font-awesome/path.less \
    fauxton/assets/less/bootstrap/font-awesome/variables.less \
    fauxton/assets/less/bootstrap/forms.less \
    fauxton/assets/less/bootstrap/grid.less \
    fauxton/assets/less/bootstrap/hero-unit.less \
    fauxton/assets/less/bootstrap/labels-badges.less \
    fauxton/assets/less/bootstrap/layouts.less \
    fauxton/assets/less/bootstrap/media.less \
    fauxton/assets/less/bootstrap/mixins.less \
    fauxton/assets/less/bootstrap/modals.less \
    fauxton/assets/less/bootstrap/navbar.less \
    fauxton/assets/less/bootstrap/navs.less \
    fauxton/assets/less/bootstrap/pager.less \
    fauxton/assets/less/bootstrap/pagination.less \
    fauxton/assets/less/bootstrap/popovers.less \
    fauxton/assets/less/bootstrap/progress-bars.less \
    fauxton/assets/less/bootstrap/reset.less \
    fauxton/assets/less/bootstrap/responsive-1200px-min.less \
    fauxton/assets/less/bootstrap/responsive-767px-max.less \
    fauxton/assets/less/bootstrap/responsive-768px-979px.less \
    fauxton/assets/less/bootstrap/responsive-navbar.less \
    fauxton/assets/less/bootstrap/responsive-utilities.less \
    fauxton/assets/less/bootstrap/responsive.less \
    fauxton/assets/less/bootstrap/scaffolding.less \
    fauxton/assets/less/bootstrap/sprites.less \
    fauxton/assets/less/bootstrap/tables.less \
    fauxton/assets/less/bootstrap/tests/buttons.html \
    fauxton/assets/less/bootstrap/tests/css-tests.css \
    fauxton/assets/less/bootstrap/thumbnails.less \
    fauxton/assets/less/bootstrap/tooltip.less \
    fauxton/assets/less/bootstrap/type.less \
    fauxton/assets/less/bootstrap/utilities.less \
    fauxton/assets/less/bootstrap/variables.less \
    fauxton/assets/less/bootstrap/wells.less \
    fauxton/assets/less/config.less \
    fauxton/assets/less/couchdb.less \
    fauxton/assets/less/database.less \
    fauxton/assets/less/fauxton.less \
    fauxton/assets/less/icons.less \
    fauxton/assets/less/logs.less \
    fauxton/assets/less/prettyprint.less \
    fauxton/assets/less/variables.less \
    fauxton/bin/grunt \
    fauxton/couchapp.js \
    fauxton/favicon.ico \
    fauxton/Gruntfile.js \
    fauxton/index.html \
    fauxton/package.json \
    fauxton/readme.md \
    fauxton/settings.json.default \
    fauxton/settings.json.sample_external \
    fauxton/tasks/addon/rename.json \
    fauxton/tasks/addon/root/base.js.underscore \
    fauxton/tasks/addon/root/resources.js.underscore \
    fauxton/tasks/addon/root/routes.js.underscore \
    fauxton/tasks/addon/template.js \
    fauxton/tasks/couchserver.js \
    fauxton/tasks/fauxton.js \
    fauxton/tasks/helper.js \
    fauxton/test/core/layoutSpec.js \
    fauxton/test/core/navbarSpec.js \
    fauxton/test/core/paginateSpec.js \
    fauxton/test/core/routeObjectSpec.js \
    fauxton/test/mocha/chai.js \
    fauxton/test/mocha/mocha.css \
    fauxton/test/mocha/mocha.js \
    fauxton/test/mocha/sinon-chai.js \
    fauxton/test/mocha/sinon.js \
    fauxton/test/mocha/testUtils.js \
    fauxton/test/runner.html \
    fauxton/test/test.config.underscore \
    fauxton/TODO.md \
    fauxton/writing_addons.md
